[tool.poetry]
name = "pandoc_cqu_thesis"
version = "0.14.7"
description = ""
authors = ["Hagb Green <hagb_green@qq.com>", "ilcpm <ilcpm@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.6"
panflute = ">=2.0"
regex = "^2021.4.4"

[tool.poetry.scripts]
pandoc_cqu_thesis = 'pandoc_cqu_thesis:main'

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
