[tool.poetry]
name = "pandoc_cqu_thesis"
version = "0.15.2"
description = "用于重庆大学毕业论文的 pandoc filter"
authors = ["Hagb Green <hagb@hagb.name>", "ilcpm <ilcpm@outlook.com>"]
readme = "README.md"
license = "MIT"
keywords = ["cqu", "Chongqing University", "pandoc"]
repository = "https://github.com/Hagb/pandoc_cqu_thesis"

[tool.poetry.dependencies]
python = "^3.6"
panflute = ">=2.0"
regex = "^2021.4.4"

[tool.poetry.scripts]
pandoc_cqu_thesis = 'pandoc_cqu_thesis:main'

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
